--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/main.css">
+
   </head>
   <body>
 
+<nav class="navbar navbar-expand-sm navbar-dark">
+	<div class="container">
+  <a class="navbar-brand" href="#">Bootstrap</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        
+          <a class="nav-link" href="https://getbootstrap.com/docs/4.0/components/alerts/">Alerts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://getbootstrap.com/docs/4.0/components/badge/">Badge</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://getbootstrap.com/docs/4.0/components/breadcrumb/">Breadcrumb</a>
+        </li>
+       <li class="nav-item">
+        <a class="nav-link" href="http://getbootstrap.com/docs/4.0/components/buttons/">Buttons</a>
+      </li>
+    </ul>
+  </div>
+</div>
+</nav>
+
+
+<div class="jumbotron text-center text-md-right text-white bg-dark">
+  <div class="container px-md-5">
+  <h1 class="display">Hello World!</h1>
+  <p class="lead">Bootstrap provides a solid foundation for any website, irrespective of project size.</p>
+  <p class="lead py-5">
+    <a class="btn btn-primary btn-lg" href="http://getbootstrap.com/">Learn more</a>
+  </p>
+</div>
+</div>
+
+  
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
 </html>
